# IAMinistrator

./: .gitignore  Cargo.toml  README.md  gitfixer
.space/: current-state.md  session-summary.md
src/: cli.rs  main.rs
src/commands/: auth.rs  entra.rs  error.rs  group.rs  intune.rs  mod.rs  ps.rs  signin.rs  user.rs
src/runtime/: auth.rs  graph.rs  mod.rs  throttle.rs
src/utils/: input.rs  mod.rs  output.rs
