[package]
name = "iaministrator"
version = "0.1.0"
edition = "2024"
description = "Entra ID and IAM professional CLI toolkit"
license= "MIT"
repository = "https://github.com/j-p-tome/IAMinistrator"

[[bin]]
name = "iam"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features= ["derive"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# linux-secret-service-rt-tokio-crypto-rust compiles in the
# org.freedesktop.secrets DBus backend required for KWallet 5/6.
# Without this feature, keyring 3.x on Linux falls back to a no-op
# stub and set_password() silently does nothing.
keyring = { version = "3.6", features = ["linux-secret-service-rt-tokio-crypto-rust"] }
rpassword = "7.5"
secrecy = "0.8"
tokio = { version = "1", features = ["rt"] }

[profile.release]
opt-level = 3
strip = true
